--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,21 +18,30 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
+    - name: Determine ECR Repository and Credentials
+      id: determine-ecr
+      run: |
+        LABEL="${{ github.event.pull_request.labels[0].name }}"
+        echo "Label: $LABEL"
+        
+        if [ "$LABEL" == "production" ]; then
+          echo "Using Production ECR"
+          echo "ECR_REPO=${{ secrets.PROD_ECR_REPOSITORY }}" >> $GITHUB_ENV
+          echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID_PROD }}" >> $GITHUB_ENV
+          echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY_PROD }}" >> $GITHUB_ENV
+        else
+          echo "Using Development ECR"
+          echo "ECR_REPO=${{ secrets.DEV_ECR_REPOSITORY }}" >> $GITHUB_ENV
+          echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID_DEV }}" >> $GITHUB_ENV
+          echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY_DEV }}" >> $GITHUB_ENV
+        fi
+
     - name: Login to Amazon ECR
       id: ecr-login
       run: |
-        if [[ "${{ github.event.pull_request.labels[0].name }}" == "production" ]]; then
-          echo "Logging in to Production ECR"
-          aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID_PROD }}
-          aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY_PROD }}
-          ECR_REPO=${{ secrets.PROD_ECR_REPOSITORY }}
-        else
-          echo "Logging in to Development ECR"
-          aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID_DEV }}
-          aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY_DEV }}
-          ECR_REPO=${{ secrets.DEV_ECR_REPOSITORY }}
-        fi
-        aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin $ECR_REPO
+        aws configure set aws_access_key_id ${{ env.AWS_ACCESS_KEY_ID }}
+        aws configure set aws_secret_access_key ${{ env.AWS_SECRET_ACCESS_KEY }}
+        aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin ${{ env.ECR_REPO }}
 
     - name: Build Docker image
       id: build-image
@@ -43,14 +52,14 @@ jobs:
     - name: Tag Docker image
       id: tag-image
       run: |
-        docker tag hello-world-app:latest $ECR_REPO:latest
+        docker tag hello-world-app:latest ${{ env.ECR_REPO }}:latest
         echo "Image tagged as latest"
 
     - name: Push Docker image to ECR
       id: push-image
       run: |
-        docker push $ECR_REPO:latest
-        echo "Image pushed to $ECR_REPO:latest"
+        docker push ${{ env.ECR_REPO }}:latest
+        echo "Image pushed to ${{ env.ECR_REPO }}:latest"
 
     - name: Deploy to S3
       if: github.event_name == 'push' && github.ref == 'refs/heads/master'
