--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,16 +18,16 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
-    - name: Build Docker image
-      id: build-image
-      run: |
-        docker build -t hello-world-app .
-        echo "Image built with tag hello-world-app"
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '14'
+
+    - name: Install dependencies
+      run: npm install
 
     - name: Run tests
-      run: |
-        # Add any tests here
-        echo "Tests are not defined in this example."
+      run: npm test
 
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -36,10 +36,17 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
+    - name: Set up AWS CLI
+      uses: aws-actions/configure-aws-credentials@v2
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ secrets.AWS_REGION }}
+
     - name: Determine ECR Repository
       id: determine-ecr
       run: |
-        LABEL="${{ github.event.pull_request.labels[0].name }}"
+        LABEL=$(echo "${{ github.event.pull_request.labels }}" | grep -o '"name": "[^"]*"' | grep -o '[^"]*$')
         echo "Label: $LABEL"
         
         if [ "$LABEL" == "production" ]; then
@@ -55,6 +62,12 @@ jobs:
       run: |
         echo "Logging in to ECR repository"
         aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin ${{ env.ECR_REPO }}
+
+    - name: Build Docker image
+      id: build-image
+      run: |
+        docker build -t hello-world-app .
+        echo "Image built with tag hello-world-app"
 
     - name: Tag Docker image
       id: tag-image
