--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "hello-world-app",
   "version": "1.0.0",
-  "description": "",
+  "description": "A simple Hello World app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"No tests specified\" && exit 0"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC"
 }
