--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,18 +28,27 @@ jobs:
         docker build -t hello-world-app .
         echo "Image built with tag hello-world-app"
 
+    - name: Determine Image Tag
+      id: determine-tag
+      run: |
+        LABEL=$(echo "${{ github.event.pull_request.labels }}" | grep -o '"name": "[^"]*"' | grep -o '[^"]*$')
+        if [ "$LABEL" == "production" ]; then
+          IMAGE_TAG="latest"
+        else
+          IMAGE_TAG="dev"
+        fi
+        echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
+
     - name: Tag Docker image
       id: tag-image
       run: |
-        IMAGE_TAG=$(if [ "${{ github.event.pull_request.labels[0].name }}" = "production" ]; then echo "latest"; else echo "dev"; fi)
-        docker tag hello-world-app:latest ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/hello-world-app:$IMAGE_TAG
-        echo "Image tagged as $IMAGE_TAG"
+        docker tag hello-world-app:latest ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/hello-world-app:${{ env.IMAGE_TAG }}
+        echo "Image tagged as ${{ env.IMAGE_TAG }}"
 
     - name: Push Docker image to ECR
       id: push-image
       run: |
-        IMAGE_TAG=$(if [ "${{ github.event.pull_request.labels[0].name }}" = "production" ]; then echo "latest"; else echo "dev"; fi)
-        docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/hello-world-app:$IMAGE_TAG
+        docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/hello-world-app:${{ env.IMAGE_TAG }}
 
     - name: Deploy to S3
       if: github.event_name == 'push' && github.ref == 'refs/heads/master'
