--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,70 +1,57 @@
-name: Build and Deploy
+name: Deploy Application
 
 on:
+  push:
+    branches:
+      - master
   pull_request:
-    types: [opened, labeled, synchronize]
+    types: [opened, synchronize, reopened, labeled]
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '14'
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
 
-    - name: Install dependencies
-      run: npm install
-
-    - name: Run tests
-      run: npm test
-
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v2
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ secrets.AWS_REGION }}
-
-    - name: Determine ECR Repository
-      id: determine-ecr
-      run: |
-        echo "PR Labels: ${{ github.event.pull_request.labels }}"
-        LABEL=$(echo "${{ github.event.pull_request.labels }}" | grep -o '"name": "[^"]*"' | grep -o '[^"]*$')
-        echo "Label: $LABEL"
-        
-        if [ "$LABEL" == "production" ]; then
-          echo "Using Production ECR"
-          echo "ECR_REPO=${{ secrets.PROD_ECR_REPOSITORY }}" >> $GITHUB_ENV
-        else
-          echo "Using Development ECR"
-          echo "ECR_REPO=${{ secrets.DEV_ECR_REPOSITORY }}" >> $GITHUB_ENV
-        fi
-      env:
-        AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
-        AWS_REGION: ${{ secrets.AWS_REGION }}
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    - name: Login to Amazon ECR
+      id: ecr-login
+      uses: aws-actions/amazon-ecr-login@v2
 
     - name: Build Docker image
-      run: docker build -t my-app .
-
-    - name: Log in to ECR
+      id: build-image
       run: |
-        if [ "${{ env.ECR_REPO }}" == "${{ secrets.PROD_ECR_REPOSITORY }}" ]; then
-          aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin ${{ secrets.PROD_ECR_REPOSITORY }}
+        docker build -t hello-world-app .
+        echo "Image built with tag hello-world-app"
+
+    - name: Determine Image Tag
+      id: determine-tag
+      run: |
+        LABEL=$(echo "${{ github.event.pull_request.labels }}" | grep -o '"name": "[^"]*"' | grep -o '[^"]*$')
+        if [ "$LABEL" == "production" ]; then
+          IMAGE_TAG="latest"
         else
-          aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin ${{ secrets.DEV_ECR_REPOSITORY }}
+          IMAGE_TAG="dev"
         fi
+        echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
+
+    - name: Tag Docker image
+      id: tag-image
+      run: |
+        docker tag hello-world-app:latest ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/hello-world-app:${{ env.IMAGE_TAG }}
+        echo "Image tagged as ${{ env.IMAGE_TAG }}"
 
     - name: Push Docker image to ECR
+      id: push-image
       run: |
-        docker tag my-app:latest ${{ env.ECR_REPO }}/my-app:latest
-        docker push ${{ env.ECR_REPO }}/my-app:latest
+        docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/hello-world-app:${{ env.IMAGE_TAG }}
 
     - name: Deploy to S3
+      if: github.event_name == 'push' && github.ref == 'refs/heads/master'
       run: |
-        aws s3 cp my-app.zip s3://my-bucket/
+        aws s3 cp ./deploy/ s3://${{ secrets.S3_BUCKET_NAME }}/ --recursive
+        echo "Application deployed to S3 bucket"
