--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,37 +38,38 @@ jobs:
         docker build -t hello-world-app .
         echo "Image built with tag hello-world-app"
 
-    - name: Print Pull Request Data
-      run: |
-        echo "Raw JSON Pull Request Data: ${{ toJson(github.event.pull_request) }}"
-
-    - name: Determine Image Tag
+    - name: Determine Image Tag and Repository
       id: determine-tag
       run: |
-        LABELS=$(echo "${{ toJson(github.event.pull_request.labels) }}" | jq -r '.[] | .name // empty' || echo "null")
+        # Extract labels from pull request
+        LABELS=$(echo "${{ toJson(github.event.pull_request.labels) }}" | jq -r '.[] | .name // empty')
 
-        echo "Extracted Labels: $LABELS"
-        
+        # Set IMAGE_TAG and ECR_REPO based on label
         if echo "$LABELS" | grep -q 'production'; then
           IMAGE_TAG="latest"
+          ECR_REPO="prod"
         elif echo "$LABELS" | grep -q 'development'; then
           IMAGE_TAG="dev"
+          ECR_REPO="dev"
         else
           echo "No valid label found, defaulting to 'dev'"
           IMAGE_TAG="dev"
+          ECR_REPO="dev"
         fi
+
         echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
+        echo "ECR_REPO=$ECR_REPO" >> $GITHUB_ENV
 
     - name: Tag Docker image
       id: tag-image
       run: |
-        docker tag hello-world-app:latest ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/hello-world-app:${{ env.IMAGE_TAG }}
+        docker tag hello-world-app:latest ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPO }}:${{ env.IMAGE_TAG }}
         echo "Image tagged as ${{ env.IMAGE_TAG }}"
 
     - name: Push Docker image to ECR
       id: push-image
       run: |
-        docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/hello-world-app:${{ env.IMAGE_TAG }}
+        docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPO }}:${{ env.IMAGE_TAG }}
 
     - name: Deploy to S3
       if: github.event_name == 'push' && github.ref == 'refs/heads/master'
