--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -87,6 +87,13 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
+    - name: List directory contents
+      run: |
+        ls -la ./deploy
+        echo "Contents of ./deploy:"
+        find ./deploy
+      shell: /usr/bin/bash -e {0}
+
     - name: Deploy to S3
       if: github.event_name == 'push' && github.ref == 'refs/heads/master'
       run: |
