--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,61 +38,52 @@ jobs:
         docker build -t hello-world-app .
         echo "Image built with tag hello-world-app"
 
-    - name: Determine Image Tag and Repository
+    - name: Determine Image Tag and ECR Repository
       id: determine-tag
       run: |
         # Extract labels from pull request
-        LABELS=$(echo "${{ toJson(github.event.pull_request.labels) }}" | jq -r '.[]?.name // empty')
+        LABELS=$(echo "${{ toJson(github.event.pull_request.labels) }}" | jq -r '.[] | .name // empty')
 
-        # Initialize variables
-        IMAGE_TAG="dev"
-        ECR_REPO="dev"
+        # Debug: Print raw labels
+        echo "Raw JSON Labels: $LABELS"
 
-        # Set IMAGE_TAG and ECR_REPO based on labels
+        # Set IMAGE_TAG and ECR_REPO based on label
         if echo "$LABELS" | grep -q 'production'; then
           IMAGE_TAG="latest"
           ECR_REPO="prod"
         elif echo "$LABELS" | grep -q 'development'; then
           IMAGE_TAG="dev"
           ECR_REPO="dev"
-        elif echo "$LABELS" | grep -q 'test-workflow'; then
-          IMAGE_TAG="test"
-          ECR_REPO="test-workflow"
         else
           echo "No valid label found, defaulting to 'dev'"
+          IMAGE_TAG="dev"
+          ECR_REPO="dev"
         fi
 
         echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
         echo "ECR_REPO=$ECR_REPO" >> $GITHUB_ENV
-      shell: /usr/bin/bash -e {0}
-      env:
-        AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
-        AWS_REGION: ${{ secrets.AWS_REGION }}
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
     - name: Tag Docker image
       id: tag-image
       run: |
-        docker tag hello-world-app:latest ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPO }}:${{ env.IMAGE_TAG }}
+        docker tag hello-world-app:latest ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/hello-world-app:${{ env.IMAGE_TAG }}
         echo "Image tagged as ${{ env.IMAGE_TAG }}"
 
     - name: Push Docker image to ECR
       id: push-image
       run: |
-        docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPO }}:${{ env.IMAGE_TAG }}
-      env:
-        AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
-        AWS_REGION: ${{ secrets.AWS_REGION }}
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/hello-world-app:${{ env.IMAGE_TAG }}
 
-    - name: List directory contents
+    - name: Create and Populate Deploy Directory
       run: |
+        mkdir -p ./deploy
+        # Add files to the directory or copy the build output
+        cp -r ./build/* ./deploy/ || echo "No build output to copy"
+
+    - name: Verify Deploy Directory
+      run: |
+        echo "Listing contents of ./deploy"
         ls -la ./deploy
-        echo "Contents of ./deploy:"
-        find ./deploy
-      shell: /usr/bin/bash -e {0}
 
     - name: Deploy to S3
       if: github.event_name == 'push' && github.ref == 'refs/heads/master'
