--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,25 +43,37 @@ jobs:
       run: |
         # Extract labels from pull request
         LABELS=$(echo "${{ toJson(github.event.pull_request.labels) }}" | jq -r '.[] | .name // empty')
-
+        
         # Debug: Print raw labels
         echo "Raw JSON Labels: $LABELS"
+        
+        # Initialize IMAGE_TAG and ECR_REPO with default values
+        IMAGE_TAG="dev"
+        ECR_REPO="dev"
 
-        # Set IMAGE_TAG and ECR_REPO based on label
-        if echo "$LABELS" | grep -q 'production'; then
-          IMAGE_TAG="latest"
-          ECR_REPO="prod"
-        elif echo "$LABELS" | grep -q 'development'; then
-          IMAGE_TAG="dev"
-          ECR_REPO="dev"
+        # Check if LABELS is not empty and set IMAGE_TAG and ECR_REPO based on label
+        if [ -n "$LABELS" ]; then
+          if echo "$LABELS" | grep -q 'production'; then
+            IMAGE_TAG="latest"
+            ECR_REPO="prod"
+          elif echo "$LABELS" | grep -q 'development'; then
+            IMAGE_TAG="dev"
+            ECR_REPO="dev"
+          else
+            echo "No valid label found, defaulting to 'dev'"
+          fi
         else
-          echo "No valid label found, defaulting to 'dev'"
-          IMAGE_TAG="dev"
-          ECR_REPO="dev"
+          echo "No labels found, defaulting to 'dev'"
         fi
-
+        
         echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
         echo "ECR_REPO=$ECR_REPO" >> $GITHUB_ENV
+      shell: /usr/bin/bash -e {0}
+      env:
+        AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
+        AWS_REGION: ${{ secrets.AWS_REGION }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
     - name: Tag Docker image
       id: tag-image
@@ -74,22 +86,13 @@ jobs:
       run: |
         docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/hello-world-app:${{ env.IMAGE_TAG }}
 
-    - name: Create and Populate Deploy Directory
-      run: |
-        mkdir -p ./deploy
-        # Add files to the directory or copy the build output
-        cp -r ./build/* ./deploy/ || echo "No build output to copy"
-
-    - name: Verify Deploy Directory
-      run: |
-        echo "Listing contents of ./deploy"
-        ls -la ./deploy
-
     - name: Deploy to S3
       if: github.event_name == 'push' && github.ref == 'refs/heads/master'
       run: |
+        mkdir -p ./deploy
         aws s3 cp ./deploy/ s3://${{ secrets.S3_BUCKET_NAME }}/ --recursive
         echo "Application deployed to S3 bucket"
+      shell: /usr/bin/bash -e {0}
       env:
         AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
         AWS_REGION: ${{ secrets.AWS_REGION }}
