--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Application
+name: Build and Deploy
 
 on:
   push:
@@ -46,19 +46,12 @@ jobs:
         
         # Debug: Print raw JSON
         echo "Raw JSON Labels: $LABELS_JSON"
-
-        # Extract label names
+        
         if [ "$LABELS_JSON" != "null" ] && [ -n "$LABELS_JSON" ]; then
           LABELS=$(echo "$LABELS_JSON" | jq -r '.[] | .name // empty')
-
-          # Debug: Print extracted labels
           echo "Extracted Labels: $LABELS"
-
-          # Initialize IMAGE_TAG and ECR_REPO with default values
           IMAGE_TAG="dev"
           ECR_REPO="dev"
-
-          # Set IMAGE_TAG and ECR_REPO based on label
           if echo "$LABELS" | grep -q 'production'; then
             IMAGE_TAG="latest"
             ECR_REPO="prod"
@@ -71,8 +64,6 @@ jobs:
         else
           echo "No valid labels found or JSON is null, defaulting to 'dev'"
         fi
-
-        # Output the selected values
         echo "IMAGE_TAG=$IMAGE_TAG"
         echo "ECR_REPO=$ECR_REPO"
         
@@ -88,40 +79,32 @@ jobs:
     - name: Tag Docker image
       id: tag-image
       run: |
-        # Debug: Print the environment variables
         echo "IMAGE_TAG=${{ env.IMAGE_TAG }}"
         echo "ECR_REPO=${{ env.ECR_REPO }}"
-
-        # Ensure IMAGE_TAG and ECR_REPO are not empty
-        if [ -z "${{ env.IMAGE_TAG }}" ] || [ -z "${{ env.ECR_REPO }}" ]; then
-          echo "IMAGE_TAG or ECR_REPO is empty. Please check the label extraction step."
+        if [ -z "${{ env.IMAGE_TAG }}" ]; then
+          echo "IMAGE_TAG is empty. Please check the label extraction step."
           exit 1
         fi
-
         docker tag hello-world-app:latest ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/hello-world-app:${{ env.IMAGE_TAG }}
         echo "Image tagged as ${{ env.IMAGE_TAG }}"
 
     - name: Push Docker image to ECR
       id: push-image
       run: |
-        # Debug: Print the environment variables
         echo "IMAGE_TAG=${{ env.IMAGE_TAG }}"
         echo "ECR_REPO=${{ env.ECR_REPO }}"
-
-        # Ensure IMAGE_TAG and ECR_REPO are not empty
-        if [ -z "${{ env.IMAGE_TAG }}" ] || [ -z "${{ env.ECR_REPO }}" ]; then
-          echo "IMAGE_TAG or ECR_REPO is empty. Please check the label extraction step."
+        if [ -z "${{ env.IMAGE_TAG }}" ]; then
+          echo "IMAGE_TAG is empty. Please check the label extraction step."
           exit 1
         fi
-
         docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/hello-world-app:${{ env.IMAGE_TAG }}
 
     - name: Deploy to S3
       if: github.event_name == 'push' && github.ref == 'refs/heads/master'
       run: |
-        mkdir -p ./deploy
-        aws s3 cp ./deploy/ s3://${{ secrets.S3_BUCKET_NAME }}/ --recursive
-        echo "Application deployed to S3 bucket"
+        echo "Deploying to S3 bucket..."
+        aws s3 sync ./path/to/static/files s3://${{ secrets.S3_BUCKET_NAME }}/ --delete
+        echo "Static website deployed to S3 bucket"
       shell: /usr/bin/bash -e {0}
       env:
         AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
