--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,20 +43,20 @@ jobs:
       run: |
         # Extract labels from pull request
         LABELS_JSON="${{ toJson(github.event.pull_request.labels) }}"
-        
+
         # Debug: Print raw JSON
         echo "Raw JSON Labels: $LABELS_JSON"
-        
+
         if [ "$LABELS_JSON" != "null" ] && [ -n "$LABELS_JSON" ]; then
           LABELS=$(echo "$LABELS_JSON" | jq -r '.[] | .name // empty')
-          
+
           # Debug: Print extracted labels
           echo "Extracted Labels: $LABELS"
-          
+
           # Initialize IMAGE_TAG and ECR_REPO with default values
           IMAGE_TAG="dev"
           ECR_REPO="dev"
-          
+
           # Set IMAGE_TAG and ECR_REPO based on label
           if echo "$LABELS" | grep -q 'production'; then
             IMAGE_TAG="latest"
@@ -70,11 +70,11 @@ jobs:
         else
           echo "No valid labels found or JSON is null, defaulting to 'dev'"
         fi
-        
+
         # Output the selected values
         echo "IMAGE_TAG=$IMAGE_TAG"
         echo "ECR_REPO=$ECR_REPO"
-        
+
         echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
         echo "ECR_REPO=$ECR_REPO" >> $GITHUB_ENV
       shell: /usr/bin/bash -e {0}
@@ -87,37 +87,40 @@ jobs:
     - name: Tag Docker image
       id: tag-image
       run: |
+        # Debug: Print the environment variables
         echo "IMAGE_TAG=${{ env.IMAGE_TAG }}"
         echo "ECR_REPO=${{ env.ECR_REPO }}"
-        
+
         # Ensure IMAGE_TAG is not empty
         if [ -z "${{ env.IMAGE_TAG }}" ]; then
           echo "IMAGE_TAG is empty. Please check the label extraction step."
           exit 1
         fi
-        
+
         # Tag the Docker image
         docker tag hello-world-app:latest ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/hello-world-app:${{ env.IMAGE_TAG }}
-        echo "Image tagged as ${{ env.IMAGE_TAG }}"
+        echo "Image tagged as ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/hello-world-app:${{ env.IMAGE_TAG }}"
       shell: /usr/bin/bash -e {0}
       env:
         AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
         AWS_REGION: ${{ secrets.AWS_REGION }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        IMAGE_TAG: ${{ env.IMAGE_TAG }}
+        ECR_REPO: ${{ env.ECR_REPO }}
 
     - name: Push Docker image to ECR
       id: push-image
       run: |
         echo "IMAGE_TAG=${{ env.IMAGE_TAG }}"
         echo "ECR_REPO=${{ env.ECR_REPO }}"
-        
+
         # Ensure IMAGE_TAG is not empty
         if [ -z "${{ env.IMAGE_TAG }}" ]; then
           echo "IMAGE_TAG is empty. Please check the label extraction step."
           exit 1
         fi
-        
+
         # Push the Docker image
         docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/hello-world-app:${{ env.IMAGE_TAG }}
       shell: /usr/bin/bash -e {0}
