--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,14 +1,11 @@
-name: Build and Deploy
+name: Push Docker Image to ECR
 
 on:
-  push:
-    branches:
-      - master
   pull_request:
     types: [opened, synchronize, reopened, labeled]
 
 jobs:
-  build-and-deploy:
+  push-image-to-ecr:
     runs-on: ubuntu-latest
 
     steps:
@@ -107,11 +104,11 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         IMAGE_TAG: ${{ env.IMAGE_TAG }}
-        ECR_REPO: ${{ env.ECR_REPO }}
 
     - name: Push Docker image to ECR
       id: push-image
       run: |
+        # Debug: Print the environment variables
         echo "IMAGE_TAG=${{ env.IMAGE_TAG }}"
         echo "ECR_REPO=${{ env.ECR_REPO }}"
 
@@ -129,16 +126,4 @@ jobs:
         AWS_REGION: ${{ secrets.AWS_REGION }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
-    - name: Deploy to S3
-      if: github.event_name == 'push' && github.ref == 'refs/heads/master'
-      run: |
-        echo "Deploying to S3 bucket..."
-        aws s3 sync ./path/to/static/files s3://${{ secrets.S3_BUCKET_NAME }}/ --delete
-        echo "Static website deployed to S3 bucket"
-      shell: /usr/bin/bash -e {0}
-      env:
-        AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
-        AWS_REGION: ${{ secrets.AWS_REGION }}
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        IMAGE_TAG: ${{ env.IMAGE_TAG }}
